--- a/sections/authorlist.tex
+++ b/sections/authorlist.tex
@@ -5,13 +5,12 @@ Lado Samushia$^{1}$, Edmond Chaussidon$^{7}$, Alex Krolewski$^{8,9, 10}$, Arnaud
 Santiago Avila$^{5}$, Benedict Bahr-Kalus$^{11}$, Jose R. Bermejo-Climent$^{12}$, Florian Beutler$^{6}$,\newauthor 
 Klaus Honscheid$^{2,13}$, Eva-Maria Mueller$^{14,15}$, Adam Myers$^{16}$, Jeffrey A. Newman$^{17}$,\newauthor
 Nathalie Palanque-Delabrouille$^{4,7}$, Will Percival$^{8,9,10}$, Christophe Yeche$^{7}$, Jessica \newauthor
-Nicole Aguilar$^{4}$, Steven Ahlen$^{18}$, Shadab Alam$^{19}$, David Brooks$^{20}$, Shaun Cole$^{21}$,\newauthor Kyle Dawson$^{22}$, Axel de la Macorra$^{23}$,  Peter Doel$^{20}$, Jaime E. Forero-Romero$^{24, 25}$,\newauthor
-Satya Gontcho A Gontcho$^{4}$, Julien Guy$^{4}$, Theodore Kisner$^{4}$, Martin Landriau$^{4}$,\newauthor
-Michael E. Levi$^{4}$, Marc Manera$^{5}$, Aaron Meisner$^{26}$, Ramon Miquel$^{5,27}$, Jundan Nie$^{28}$,\newauthor
-Claire Poppett$^{4, 29}$, 
-Graziano Rossi$^{30}$,
-Eusebio Sanchez$^{31}$, Michael Schubnell$^{32}$,\newauthor
-Gregory Tarlé$^{32}$, Benjamin Alan Weaver$^{26}$, Zhimin Zhou$^{28}$
+Nicole Aguilar$^{4}$, Steven Ahlen$^{18}$, Shadab Alam$^{19}$, David Brooks$^{20}$, Todd Claybaugh$^{4}$,\newauthor
+Shaun Cole$^{21}$, Kyle Dawson$^{22}$, Axel de la Macorra$^{23}$,  Peter Doel$^{20}$, Andreu Font-Ribera$^{5}$,\newauthor
+Jaime E. Forero-Romero$^{24, 25}$, Satya Gontcho A Gontcho$^{4}$, Julien Guy$^{4}$, Theodore Kisner$^{4}$,\newauthor
+Martin Landriau$^{4}$, Michael E. Levi$^{4}$, Marc Manera$^{5}$, Aaron Meisner$^{26}$, Ramon Miquel$^{5,27}$,\newauthor
+Jundan Nie$^{28}$, Claire Poppett$^{4, 29}$, Graziano Rossi$^{30}$, Eusebio Sanchez$^{31}$, Michael Schubnell$^{32}$,\newauthor
+Gregory Tarlé$^{32}$, Benjamin Alan Weaver$^{26}$, Zhimin Zhou$^{28}$, Hu Zou$^{28}$
 \\~\\
 % List of institutions
 $^{1}$Department of Physics, Kansas State University, 116 Cardwell Hall, Manhattan, KS 66506, USA\\
