--- a/ms.tex
+++ b/ms.tex
@@ -2,8 +2,8 @@
 \documentclass[fleqn, usenatbib]{mnras}
 \usepackage{style} % all stuff 
 \usepackage{booktabs,array} 
-\usepackage{lineno}
-\linenumbers
+%\usepackage{lineno}
+%\linenumbers
 
 \title[PNG with DESI Imaging]{Local primordial non-Gaussianity from the large-scale clustering of photometric DESI luminous red galaxies}
 
