--- a/refs.bib
+++ b/refs.bib
@@ -1565,9 +1565,10 @@ archivePrefix = {arXiv},
 }
 
 @article{desi2023sv,
-  author = {{DESI Collaboration et al.}},
-  year = 2023,
-  note = {in preparation}
+  title={Validation of the Scientific Program for the Dark Energy Spectroscopic Instrument},
+  author={{DESI Collaboration} and Adame, AG and Aguilar, J and Ahlen, S and Alam, S and Aldering, G and Alexander, DM and Alfarsy, R and Prieto, C Allende and Alvarez, M and Alves, O and others},
+  journal={arXiv preprint arXiv:2306.06307},
+  year={2023}
 }
 
 @ARTICLE{2011ApJ...737..103S,
