--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,3 +1,3 @@
 \begin{abstract}
-We use the angular power spectrum of luminous red galaxies (LRGs) selected from the Dark Energy Spectroscopic Instrument (DESI) imaging surveys to constrain the local primordial non-Gaussianity parameter $\fnl$. Our sample comprises over $12$ million LRG targets, spanning approximately $14,000$ square degrees of the sky, with redshifts in the range $0.2< z < 1.35$. Galactic extinction, survey depth, and astronomical seeing are identified as the primary sources of systematic error using feature selection and cross-correlation techniques. Linear regression and artificial neural networks are applied to mitigate systematics and alleviate non-cosmological excess clustering signals on large scales. Our treatment methods are tested and calibrated rigorously against log-normal density simulations with and without $\fnl$ and systematic effects. We find that the neural network treatment outperforms linear regression in reducing remaining systematics in the DESI LRG sample. Assuming the universality relation, we find $\fnl = 47^{+14~(+29)}_{-11~(-22)}$ at $68\%$~($95\%$) confidence for our fiducial method. Applying a more aggressive systematics treatment that includes regression against the full set of imaging maps we identified, our maximum likelihood value changes only slightly to $\fnl \sim 50$, but the uncertainty on $\fnl$ increases due to the aggressive treatment removing large-scale clustering information. We apply a series of robustness tests (e.g., cuts on imaging, declination, or scales used) that show consistency in the obtained constraints. Despite various attempts to mitigate systematics, we have measured $\fnl > 0$ with a $99.9$ percent confidence level. This result raises concerns as it could be attributed to unforeseen systematics, such as calibration errors in photometric zero-point determination or Galactic extinction corrections. One particular culprit might be the uncertainties associated with low-$\ell$ systematics in the extinction template. Alternatively, it may indicate the presence of a new cosmological signal, specifically a scale-dependent $\fnl$ model that induces significant non-Gaussianity around large-scale structure while leaving cosmic microwave background scales unaffected. Our results motivate follow-up studies of $\fnl$ with DESI spectroscopic samples, where the inclusion of 3D clustering modes should help separate imaging systematics.
+We use angular clustering of luminous red galaxies from the Dark Energy Spectroscopic Instrument (DESI) imaging surveys to constrain the local primordial non-Gaussianity parameter $\fnl$. Our sample comprises over 12 million targets, covering 14,000 square degrees of the sky, with redshifts in the range $0.2< z < 1.35$. We identify Galactic extinction, survey depth, and astronomical seeing as the primary sources of systematic error, and employ linear regression and artificial neural networks to alleviate non-cosmological excess clustering on large scales. Our methods are tested against log-normal simulations with and without $\fnl$ and systematics, showing superior performance of the neural network treatment in reducing remaining systematics. Assuming the universality relation, we find $\fnl = 47^{+14(+29)}_{-11(-22)}$ at 68\%(95\%) confidence. With a more aggressive treatment, including regression against the full set of imaging maps, our maximum likelihood value shifts slightly to $\fnl \sim 50$ and the uncertainty on $\fnl$ increases due to the removal of large-scale clustering information. We apply a series of robustness tests (e.g., cuts on imaging, declination, or scales used) that show consistency in the obtained constraints. Despite extensive efforts to mitigate systematics, our measurements indicate $\fnl > 0$ with a $99.9$ percent confidence level. This outcome raises concerns as it could be attributed to unforeseen systematics, including calibration errors or uncertainties associated with low-$\ell$ systematics in the extinction template. Alternatively, it could suggest a scale-dependent $\fnl$ model--causing significant non-Gaussianity around large-scale structure while leaving cosmic microwave background scales unaffected. Our results encourage further studies of $\fnl$ with DESI spectroscopic samples, where the inclusion of 3D clustering modes should help separate imaging systematics.
 \end{abstract}
