--- a/sections/authorlist.tex
+++ b/sections/authorlist.tex
@@ -1,51 +1,36 @@
 % If you need two or more lines of authors, add an extra line using \newauthor
 
-\author[M. Rezaie et al.]{Mehdi Rezaie$^{1,2}$, Ashley J. Ross$^{2}$, Hee-Jong Seo$^{3,4}$,  Hui Kong$^{5}$,  Anna Porredon$^{6}$,\newauthor
-Lado Samushia$^{1}$, Edmond Chaussidon$^{7}$, Alex Krolewski$^{8,9, 10}$, Arnaud de Mattia$^{7}$,\newauthor
-Santiago Avila$^{5}$, Benedict Bahr-Kalus$^{11}$, Jose R. Bermejo-Climent$^{12}$, Florian Beutler$^{6}$,\newauthor 
-Klaus Honscheid$^{2,13}$, Eva-Maria Mueller$^{14,15}$, Adam Myers$^{16}$, Jeffrey A. Newman$^{17}$,\newauthor
-Nathalie Palanque-Delabrouille$^{4,7}$, Will Percival$^{8,9,10}$, Christophe Yeche$^{7}$, Jessica \newauthor
-Nicole Aguilar$^{4}$, Steven Ahlen$^{18}$, Shadab Alam$^{19}$, David Brooks$^{20}$, Todd Claybaugh$^{4}$,\newauthor
-Shaun Cole$^{21}$, Kyle Dawson$^{22}$, Axel de la Macorra$^{23}$,  Peter Doel$^{20}$, Andreu Font-Ribera$^{5}$,\newauthor
-Jaime E. Forero-Romero$^{24, 25}$, Satya Gontcho A Gontcho$^{4}$, Julien Guy$^{4}$, Theodore Kisner$^{4}$,\newauthor
-Martin Landriau$^{4}$, Michael E. Levi$^{4}$, Marc Manera$^{5}$, Aaron Meisner$^{26}$, Ramon Miquel$^{5,27}$,\newauthor
-Jundan Nie$^{28}$, Claire Poppett$^{4, 29}$, Graziano Rossi$^{30}$, Eusebio Sanchez$^{31}$, Michael Schubnell$^{32}$,\newauthor
-Gregory Tarlé$^{32}$, Benjamin Alan Weaver$^{26}$, Zhimin Zhou$^{28}$, Hu Zou$^{28}$
+\author[M. Rezaie et al.]{Mehdi Rezaie$^{1,2}$, Ashley J. Ross$^{2}$, Hee-Jong Seo$^{3,4}$, Hui Kong$^{5}$, \newauthor Anna Porredon$^{6}$, Lado Samushia$^{1}$, Edmond Chaussidon$^{7}$, Alex Krolewski$^{8,9,10}$, \newauthor Arnaud de Mattia$^{7}$, Florian Beutler$^{6}$, Jessica Nicole Aguilar$^{4}$, Steven Ahlen$^{11}$, \newauthor Shadab Alam$^{12}$, Santiago Avila$^{5}$, Benedict Bahr-Kalus$^{13}$, Jose Bermejo-Climent$^{14}$, \newauthor David Brooks$^{15}$, Todd Claybaugh$^{4}$, Shaun Cole$^{16}$, Kyle Dawson$^{17}$, \newauthor Axel de la Macorra$^{18}$, Peter Doel$^{15}$, Andreu Font-Ribera$^{5}$, Jaime E. Forero-Romero$^{19,20}$, \newauthor Satya Gontcho A Gontcho$^{4}$, Julien Guy$^{4}$, Klaus Honscheid$^{2, 21}$, Theodore Kisner$^{4}$, \newauthor Martin Landriau$^{4}$, Michael Levi$^{4}$, Marc Manera$^{5,22}$, Aaron Meisner$^{23}$, \newauthor Ramon Miquel$^{5, 24}$, Eva-Maria Mueller$^{25}$, Adam Myers$^{26}$, Jeffrey A. Newman$^{27}$, \newauthor Jundan Nie$^{28}$, Nathalie Palanque-Delabrouille$^{4,7}$, Will Percival$^{8,9,10}$, Claire Poppett$^{4,29}$, \newauthor Graziano Rossi$^{30}$, Eusebio Sanchez$^{31}$, Michael Schubnell$^{32}$, Gregory Tarlé$^{32}$, \newauthor Benjamin Alan Weaver$^{23}$, Christophe Yèche$^{7}$, Zhimin Zhou$^{28}$, Hu Zou$^{28}$
 \\~\\
 % List of institutions
-$^{1}$Department of Physics, Kansas State University, 116 Cardwell Hall, Manhattan, KS 66506, USA\\
-$^{2}$Center for Cosmology and AstroParticle Physics, The Ohio State University, 191 West Woodruff Avenue, Columbus, OH 43210, USA\\
-$^{3}$Department of Physics and Astronomy, Ohio University, Athens, OH 45701, USA\\
-$^{4}$Lawrence Berkeley National Laboratory, 1 Cyclotron Road, Berkeley, CA 94720, USA\\
-$^{5}$ Institut de  F\'isica d'Altes Energies, The Barcelona Institute of Science and Technology, Campus UAB, 08193 Bellaterra (Barcelona), Spain\\
-$^{6}$Institute for Astronomy, University of Edinburgh, Royal Observatory, Blackford Hill, Edinburgh EH9 3HJ, UK\\
-$^{7}$ IRFU, CEA, Universite Paris-Saclay, F-91191 Gif-sur-Yvette, France\\
-$^{8}$Department of Physics and Astronomy, University of Waterloo, 200 University Ave W, Waterloo, ON N2L 3G1, Canada\\
-$^{9}$Perimeter Institute for Theoretical Physics, 31 Caroline St. North, Waterloo, ON N2L 2Y5, Canada\\
-$^{10}$Waterloo Centre for Astrophysics, University of Waterloo, 200 University Ave W, Waterloo, ON N2L 3G1, Canada\\
-$^{11}$Korea Astronomy and Space Science Institute, Yuseong-gu, Daedeok-daero 776, Daejeon 34055, Republic of Korea\\
-$^{12}$ Department of Physics and Astronomy, University of Rochester, 500 Joseph C. Wilson Boulevard, Rochester, NY 14627, USA \\
-$^{13}$Department of Physics, The Ohio State University, 191 West Woodruff Avenue, Columbus, OH 43210, USA\\
-$^{14}$Institute of Cosmology and Gravitation, Dennis Sciama Building, University of Portsmouth, Portsmouth PO1 3FX, UK \\
-$^{15}$Department of Physics \& Astronomy, University of Sussex, Brighton BN1 9QH, UK\\
-$^{16}$Department of Physics and Astronomy, University of Wyoming, Laramie, WY 82071, USA\\
-$^{17}$Department of Physics and Astronomy and PITT PACC, University of Pittsburgh, Pittsburgh, PA 15260, USA\\
-$^{18}$Physics Department, Boston University, 590 Commonwealth Avenue, Boston, MA 02215,
-USA\\
-$^{19}$Tata Institute of Fundamental Research, Homi Bhabha Road, Mumbai 400005, India\\
-$^{20}$Department of Physics and Astronomy, University College London, Gower Street, London,
-WC1E 6BT, UK\\
-$^{21}$Institute for Computational Cosmology, Department of Physics, Durham University, South Road, Durham DH1 3LE, UK\\
-$^{22}$Department of Physics and Astronomy, The University of Utah, 115 South 1400 East, Salt Lake City, UT 84112, USA\\
-$^{23}$Instituto de Física, Universidad Nacional Autónoma de México, Cd. de México C.P. 04510,
-México\\
-$^{24}$Departamento de F\'isica, Universidad de los Andes, Cra. 1 No. 18A-10, Edificio Ip, CP 111711, Bogot\'a, Colombia\\
-$^{25}$Observatorio Astron\'omico, Universidad de los Andes, Cra. 1 No. 18A-10, Edificio H, CP 111711 Bogot\'a, Colombia\\
-$^{26}$NSF's NOIRLab, 950 N. Cherry Ave., Tucson, AZ 85719, USA\\
-$^{27}$Instituci\'{o} Catalana de Recerca i Estudis Avan\c{c}ats, Passeig de Llu\'{\i}s Companys, 23, 08010 Barcelona, Spain\\
-$^{28}$National Astronomical Observatories, Chinese Academy of Sciences, A20 Datun Rd., Chaoyang District, Beijing, 100012, P.R. China\\
-$^{29}$Space Sciences Laboratory, University of California, Berkeley, 7 Gauss Way, Berkeley, CA 94720, USA\\
-$^{30}$Department of Physics and Astronomy, Sejong University, Seoul, 143-747, Korea\\
-$^{31}$CIEMAT, Avenida Complutense 40, E-28040 Madrid, Spain\\
-$^{32}$Department of Physics, University of Michigan, Ann Arbor, MI 48109, USA
-}
+$^{1}$Department of Physics, Kansas State University, 116 Cardwell Hall, Manhattan, KS 66506, USA\\ 
+$^{2}$Center for Cosmology and AstroParticle Physics, The Ohio State University, 191 West Woodruff Avenue, Columbus, OH 43210, USA\\ 
+$^{3}$Department of Physics \& Astronomy, Ohio University, Athens, OH 45701, USA\\ $^{4}$Lawrence Berkeley National Laboratory, 1 Cyclotron Road, Berkeley, CA 94720, USA\\ 
+$^{5}$Institut de F\'{i}sica d’Altes Energies (IFAE), The Barcelona Institute of Science and Technology, Campus UAB, 08193 Bellaterra Barcelona, Spain\\ 
+$^{6}$Institute for Astronomy, University of Edinburgh, Royal Observatory, Blackford Hill, Edinburgh EH9 3HJ, UK\\ 
+$^{7}$IRFU, CEA, Universit\'{e} Paris-Saclay, F-91191 Gif-sur-Yvette, France\\ 
+$^{8}$Waterloo Centre for Astrophysics, University of Waterloo, 200 University Ave W, Waterloo, ON N2L 3G1, Canada\\ 
+$^{9}$Perimeter Institute for Theoretical Physics, 31 Caroline St. North, Waterloo, ON N2L 2Y5, Canada\\ 
+$^{10}$Department of Physics and Astronomy, University of Waterloo, 200 University Ave W, Waterloo, ON N2L 3G1, Canada\\ 
+$^{11}$Physics Department, Boston University, 590 Commonwealth Avenue, Boston, MA 02215, USA\\ 
+$^{12}$Tata Institute of Fundamental Research, Homi Bhabha Road, Mumbai 400005, India\\ 
+$^{13}$Korea Astronomy and Space Science Institute, 776, Daedeokdae-ro, Yuseong-gu, Daejeon 34055, Republic of Korea\\ 
+$^{14}$Department of Physics \& Astronomy, University of Rochester, 206 Bausch and Lomb Hall, P.O. Box 270171, Rochester, NY 14627-0171, USA\\ 
+$^{15}$Department of Physics \& Astronomy, University College London, Gower Street, London, WC1E 6BT, UK\\ 
+$^{16}$Institute for Computational Cosmology, Department of Physics, Durham University, South Road, Durham DH1 3LE, UK\\ 
+$^{17}$Department of Physics and Astronomy, The University of Utah, 115 South 1400 East, Salt Lake City, UT 84112, USA\\ 
+$^{18}$Instituto de F\'{\i}sica, Universidad Nacional Aut\'{o}noma de M\'{e}xico,  Cd. de M\'{e}xico  C.P. 04510,  M\'{e}xico\\ 
+$^{19}$Departamento de F\'isica, Universidad de los Andes, Cra. 1 No. 18A-10, Edificio Ip, CP 111711, Bogot\'a, Colombia\\ 
+$^{20}$Observatorio Astron\'omico, Universidad de los Andes, Cra. 1 No. 18A-10, Edificio H, CP 111711 Bogot\'a, Colombia\\ 
+$^{21}$Department of Physics, The Ohio State University, 191 West Woodruff Avenue, Columbus, OH 43210, USA\\ 
+$^{22}$Departament de F\'{i}sica, Universitat Aut\`{o}noma de Barcelona, 08193 Bellaterra (Barcelona), Spain\\ 
+$^{23}$NSF's NOIRLab, 950 N. Cherry Ave., Tucson, AZ 85719, USA\\ 
+$^{24}$Instituci\'{o} Catalana de Recerca i Estudis Avan\c{c}ats, Passeig de Llu\'{\i}s Companys, 23, 08010 Barcelona, Spain\\ 
+$^{25}$Department of Physics and Astronomy, University of Sussex, Brighton BN1 9QH, U.K\\ 
+$^{26}$Department of Physics \& Astronomy, University  of Wyoming, 1000 E. University, Dept.~3905, Laramie, WY 82071, USA\\ 
+$^{27}$Department of Physics \& Astronomy, University of Pittsburgh, 3941 O'Hara Street, Pittsburgh, PA 15260, USA\\ 
+$^{28}$National Astronomical Observatories, Chinese Academy of Sciences, A20 Datun Rd., Chaoyang District, Beijing, 100012, P.R. China\\ 
+$^{29}$Space Sciences Laboratory, University of California, Berkeley, 7 Gauss Way, Berkeley, CA  94720, USA\\ 
+$^{30}$Department of Physics and Astronomy, Sejong University, Seoul, 143-747, Korea\\ 
+$^{31}$CIEMAT, Avenida Complutense 40, E-28040 Madrid, Spain\\ 
+$^{32}$Department of Physics, University of Michigan, Ann Arbor, MI 48109, USA}
